--- a/css/estilos.css
+++ b/css/estilos.css
@@ -83,7 +83,35 @@ header{
     color: #42697b;
 }
 
+.menu nav ul li a i{
+    display: none;
+}
+
+#icon-menu{
+    width: 50px;
+    height: 50px;
+    position: absolute;
+    right: 20px;
+    top: 16px;
+    padding: 10px;
+    font-size: 20px;
+    background: #eeeeea;
+    border-radius: 100%;
+    color: #787878;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    cursor: pointer;
+    display: none;
+}
+
+#icon-menu:hover{
+    opacity: 0.8;
+}
+
 /*Portada*/
+
+
 .container-cover{
     width: 100%;
     height: 500px;
@@ -133,10 +161,13 @@ header{
 
 /*Contenedor - contenido del articulo*/
 
+
 .container-content{
     width: 1200px;
     margin: auto;
     margin-top: 40px;
+    display: flex;
+    justify-content: center;
 }
 
 article{
@@ -172,11 +203,144 @@ article p{
     color: #3c3c3c;
 }
 
-article img{
-    width: 8%;
 
-    position: absolute;
-    top: 0;
-    left: 350px;
+/*Aside de los articulos de relacionados*/
+
+
+.container-aside aside{
+    width: 320px;
+    box-shadow: 0 0 20px -20px black;
+    border-radius: 6px;
+    overflow: hidden;
+    margin-left: 40px;
+    margin-bottom: 40px;
+    padding-bottom: 20px;
+}
+
+.container-aside aside img{
+    width: 100%;
+}
+
+.container-aside aside h2,
+.container-aside aside p{
     margin-top: 20px;
+    padding: 0px 20px;
+}
+
+.container-aside aside button{
+    margin-top: 20px;
+    margin-left: 20px;
+    padding: 10px 50px;
+    font-size: 16px;
+    background-color: #42697b;
+    border: none;
+    color: #fff;
+    cursor: pointer;
+    border-radius: 6px;
+}
+
+.container-aside aside button:hover{
+    opacity: 0.9;
+}
+
+/*Responsive Desing - Adaptable Moviles*/
+
+
+@media screen and (max-width: 1220px){
+
+    .header-content,
+     .container-content{
+        max-width: 1000px;
+        padding: 0 20px;
+    }
+
+}
+
+@media screen and (max-width: 1020px){
+
+    .container-content{
+        width: 100%;
+        flex-direction: column;
+    }
+
+    article{
+        box-shadow: 0 0 0 0;
+    }
+
+    .container-aside{
+        display: flex;
+        justify-content: center;
+    }
+
+    .container-aside aside{
+        max-width: 300px;
+        margin: 10px;
+    }
+
+}
+
+@media screen and (max-width: 800px){
+
+    .container-all{
+        transition: all 300ms;
+    }
+
+    .move-container-all{
+        transform: translateX(300px );
+    }
+
+    .menu{
+        width: 0px;
+        height: 100vh;
+        position: fixed;
+        top: 80px;
+        left: 0;
+        background: #fff; 
+        overflow: hidden;
+        transform: translateX(-350px);
+        box-shadow: 10px 0 20px -25 black;
+        transition: all 300ms;
+    }
+
+    .show-lateral {
+        width: 300px;
+        transform: translateX(0);
+    }
+
+    .menu nav ul {
+        flex-direction: column;
+    }
+
+    .menu nav ul li{
+        max-width: 200px;
+        height: 50px;
+        justify-content: center;
+        justify-content: flex-start;
+
+    }
+
+    .menu-selected:before{
+        width: 0;
+    }
+
+    .menu nav ul li a{
+        margin-top: 40px;
+        color: #858585;
+    }
+
+    .menu nav ul li a i{
+        width: 20px;
+        display: inline-block;
+        margin-right: 10px;
+        color: #42697b;
+    }
+
+    #icon-menu{
+        display: flex;
+    }
+
+    .container-aside{
+        flex-wrap: wrap;
+    }
+
 }
