--- a/css/estilos.css
+++ b/css/estilos.css
@@ -243,6 +243,19 @@ article p{
     opacity: 0.9;
 }
 
+.container-all button{
+
+    margin-top: 20px;
+    margin-left: 20px;
+    padding: 10px 50px;
+    font-size: 16px;
+    background-color: #42697b;
+    border: none;
+    color: #fff;
+    cursor: pointer;
+    border-radius: 6px;
+}
+
 /*Responsive Desing - Adaptable Moviles*/
 
 
@@ -357,4 +370,107 @@ article p{
         display: flex;
         justify-content: center;
 
+    }
+
+    /*Formulario*/
+
+    .form_a{
+        margin: 0 auto;
+        color: #3c3c3c;
+
+        border-radius: 3px;
+        padding: 10px;
+        width: 100%;
+
+    }
+
+    input, textarea{
+        border: 0;
+        outline: one;
+
+    }
+
+    .field{
+
+        border: solid 1px #ccc;
+        padding: 10px;
+
+        width: 100%;
+
+    }
+
+    .field:focus{
+        border: #42697b;
+    }
+
+    .field_a{
+
+        margin-left: 20px;
+
+        border: solid 1px #ccc;
+        padding: 10px;
+
+        width: 15%;
+        
+    }
+
+    /*Tablero*/
+
+    table{
+        margin-top: 25px;
+        background-color: white;
+        text-align: center;
+        border-collapse: collapse;
+        width: 100%;
+    }
+
+    th, td{
+        padding: 20px;
+    }
+
+    th{
+        background-color: #42697b;
+        border-bottom: solid 5px #0f362d;
+        color: white;
+    }
+
+    tr:nth-child(even){
+        background-color: #ddd;
+    }
+
+    tr:hover td{
+        background-color: #42697b;
+        color: white;
+    }
+
+    /*Boton*/
+
+    .btn-primary{
+
+            margin-top: 20px;
+            margin-left: 20px;
+            padding: 10px 50px;
+            font-size: 16px;
+            background-color: #42697b;
+            border: none;
+            color: #fff;
+            cursor: pointer;
+            border-radius: 6px;
+            opacity: 0.9;
+
+    }
+
+    /*listado_alumn*/
+
+    .search-bar{
+        margin-bottom: 20px;
+    }
+
+    .search-bar .field{
+        width: 68%;
+        margin-bottom: 5px;
+    }
+
+    .search-bar .submit{
+        width: 30%;
     }
